--- a/index.html
+++ b/index.html
@@ -4,9 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
     <title></title>
 </head>
 <body>
-    
+   <header>
+    <div class="container">
+        <!-- navigation_panel -->
+        <nav>
+            <ul class="navigation_panel">
+                <li class="navigation_panel_position"><a href="#" class="navigation_panel_decoration">ГЛАВНАЯ</a></li>
+                <li class="navigation_panel_position"><a href="#" class="navigation_panel_decoration">ОБ АВТОРЕ</a></li>
+                <li class="navigation_panel_position"><a href="#" class="navigation_panel_decoration">РАБОТЫ</a></li>
+                <li class="navigation_panel_position"><a href="#" class="navigation_panel_decoration">ПРОЦЕСС</a></li>
+                <li class="navigation_panel_position"><a href="#" class="navigation_panel_decoration">КОНТАКТЫ</a></li>
+            </ul>
+        </nav>
+    </div>
+   </header> 
+ <!-- First block with text  -->
+   <section class="first_text_block">
+    <div class="container">
+        <h1 class="title">Дизайн и верстка</h1>
+        <p class="text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br> вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов<br> на латинице с начала XVI века.</p>
+        <div class="btn">
+            <a href="" class="write_me"><span class="btn_text">НАПИСАТЬ МНЕ</span> </a>
+        </div>
+    </div>
+   </section>
+   <!-- ABOUT ME  -->
+   <section class="about_me">
+    <div class="container">
+        <h2 >Обо мне</h2>
+        <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br> вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов<br> на латинице с начала XVI века.</p>
+    </div>
+   </section>
+   <section class="image_block">
+    <div class="container">
+        <ul>
+            <li class="images_position image_1"><img src="./images/numbers__item.svg" alt="image_icon"></li>
+            <li class="images_position image_2"><img src="./images/numbers__item.svg" alt="image_icon"></li>
+            <li class="images_position image_3"><img src="./images/numbers__item.svg" alt="image_icon"></li>
+            <li class="images_position image_4"><img src="./images/numbers__item.svg" alt="image_icon"></li>
+            <li class="images_position image_5"><img src="./images/numbers__item.svg" alt="image_icon"></li>
+            <li class="images_position image_6"><img src="./images/numbers__item.svg" alt="image_icon"></li>
+        </ul>
+    </div>
+   </section>
+   <section class="how_i_work">
+    <div class="container">
+        <h2 class="work_title">Как я работаю</h2>
+        <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br> вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов<br> на латинице с начала XVI века.</p>
+        
+        <img src="./images/Rectangle 5.svg" alt="video_icon" class="video_icon">
+    </div>
+   </section>
+   <footer class="ending">
+    <div class="container">
+        <h4 class="creator_name">Иванов Иван</h4>
+        <p class="copyright">(с) 2018. Все права защищены.</p>
+    </div>
+   </footer>
 </body>
 </html>
