--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <title>float</title>
 </head>
 <body>
+    <div class="bg">
+        <!-- ПЕРВЫЙ БЛОК -->
+<div class="border_top">
+  
+    <div class="left_square"><p class="default_paragraph">1</p></div>
     
-</body>
-</html>
+    <div class="right_square"><p class="default_paragraph">2</p></div>
+   <div class="clear"></div>
+</div>
+<!-- ВТОРОЙ БЛОК  -->
+<div class="borders_middle">
+<div class="left_square"><p class="default_paragraph">1</p></div>
+<div>
+    <div class="small_squares_first"><p class="small_paragraph">5</p></div>
+    <div class="small_squares"><p class="small_paragraph">4</p></div>
+    <div class="small_squares"><p class="small_paragraph">3</p></div>
+    <div class="small_squares"><p class="small_paragraph">2</p></div>
+    
+</div>
+<div class="clear"></div>
+</div>
+<!-- ТРЕТИЙ БЛОК  -->
+<div class="borders_bottom">
+<div class="left_square one_left"><p class="default_paragraph">1</p></div>
+<div class="left_square"><p class="default_paragraph">2</p></div>
+<div class="right_square"><p class="default_paragraph">4</p></div>
+<div class="right_square one_right"><p class="default_paragraph">3</p></div>
+<div class="clear"></div>
+</div>
+</div>
+<body>
+</head>
