--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    </section>
    <section class="image_block">
     <div class="container">
-        <ul>
+        <ul class="images">
             <li class="images_position image_1"><img src="./images/numbers__item.svg" alt="image_icon"></li>
             <li class="images_position image_2"><img src="./images/numbers__item.svg" alt="image_icon"></li>
             <li class="images_position image_3"><img src="./images/numbers__item.svg" alt="image_icon"></li>
