--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@700&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
     <title></title>
 </head>
 <body>
+ <div class="wrap">
     
+    <div class="main">
+        <div class="wrap">
+        <h1>Support Your Local Artisans</h1>
+        <p>Discover brands and theit stories</p>
+        <div class="btn">
+            <a href="#">Browse bands</a>
+        </div>
+    </div>
+</div>
+ </div>
 </body>
 </html>
