--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css">
     <title></title>
 </head>
 <body>
-    
+    <div class="container">
+        
+<nav>
+    <div class="wrap">
+<div>
+    <p>Доставка</p>
+</div>
+<div>
+    <p>Оплата</p>
+</div>
+<div>
+    <p>Отзывы</p>
+</div>
+<div>
+    <p>Вопрос - ответ</p>
+</div>
+<div>
+    <p>Контакты</p>
+</div>
+</div>
+</nav>
+
+
+
+
+
+
+
+
+    </div>
 </body>
 </html>
