--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         
 <nav>
     <div class="wrap">
+        
 <div>
     <p>Доставка</p>
 </div>
@@ -26,6 +27,30 @@
 </div>
 <div>
     <p>Контакты</p>
+</div>
+
+</div>
+<div class="wrap image">
+<div class="logo"><img src="./images/logo.svg" alt="logo"></div>
+</div>
+<div class="wrap second_nav">
+<div>
+    <p>Парикмахерская</p>
+</div>
+<div>
+    <p>Барбершоп</p>
+</div>
+<div>
+    <p>Маникюр</p>
+</div>
+<div>
+    <p>Педикюр</p>
+</div>
+<div>
+    <p>Массаж</p>
+</div>
+<div>
+    <p>Мебель</p>
 </div>
 </div>
 </nav>
