--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title></title>
 </head>
 <body>
-    <div class="container">
+    <header>
+        <div class="container">
         
 <nav>
     <div class="wrap">
@@ -54,14 +55,105 @@
 </div>
 </div>
 </nav>
-
-
-
-
-
-
-
-
+</header>
+</div>
+<div class="container">
+<section>
+    <div class="wrap black_chair">
+    
+<h1>Супер кресло</h1>
+<p>Текст акции всегда отражает суть, а не просто <br>
+    болтовню, поэтому внимательнее</p>
+    <div class="btn">
+       <a href="#">Подробнее</a> 
     </div>
+    </div>
+</section>
+</div>
+<div class="container">
+<section>
+    <div class="background_main">
+    <div class="wrap special_offers">
+        <p>Специальные предложения</p>
+    </div>
+    <div class="wrap special_offers_list">
+        <!-- First_Chair -->
+        <div class="wrap list_item">
+            <div>
+            <img src="./images/green_chair.png" alt="green_chair">
+             </div>
+             <div>
+            <p>Парикмахерское кресло<br> «Норм» гидравлическое</p>
+        </div>
+        <div>
+            <p>9 900 ₽ </p>
+        </div>
+            <div class="btn pink_btn"><a href="#">Купить</a></div>
+        </div>
+        <!-- Second chair -->
+        <div class="wrap list_item">
+            <div>
+            <img src="./images/green_chair.png" alt="green_chair">
+             </div>
+             <div>
+            <p>Парикмахерское кресло<br> «Норм» гидравлическое</p>
+        </div>
+        <div>
+            <p>9 900 ₽ </p>
+        </div>
+            <div class="btn pink_btn"><a href="#">Купить</a></div>
+        </div>
+        <!-- Third_Chair -->
+        <div class="wrap list_item">
+            <div>
+            <img src="./images/green_chair.png" alt="green_chair">
+             </div>
+             <div>
+            <p>Парикмахерское кресло<br> «Норм» гидравлическое</p>
+        </div>
+        <div>
+            <p>9 900 ₽ </p>
+        </div>
+            <div class="btn pink_btn"><a href="#">Купить</a></div>
+        </div>
+        <!-- Last_Chair -->
+        <div class="wrap list_item">
+            <div>
+            <img src="./images/green_chair.png" alt="green_chair">
+             </div>
+             <div>
+            <p>Парикмахерское кресло<br> «Норм» гидравлическое</p>
+        </div>
+        <div>
+            <p>9 900 ₽ </p>
+        </div>
+            <div class="btn pink_btn"><a href="#">Купить</a></div>
+        </div>
+    </div>
+</div>
+
+</section>
+</div>
+<div class="container">
+<section>
+    <div class="wrap">
+    <div class="pink_square">
+        <h2>Получайте бонусы и подарки</h2>
+        <p>Каждый месяц разыгрываем<br>
+            10 000 рублей для наших клиентов</p>
+            <input type="email" placeholder="Введите e-mail">
+            <div class="email_icon"><img src="./images/Email.svg" alt=""></div>
+    </div>
+    <div class="pink_square">
+        <h2>Заходите к нам</h2>
+        <p>Более 300 магазинов<br>
+            по всей России</p>
+            <div class="btn"><a href="#">Карта магазинов</a></div>
+            <div class="car_icon"><img src="./images/Car.svg" alt="Car"></div>
+    </div>
+</div>
+</section>
+</div>
+  
 </body>
 </html>
