--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         </div>
         </div>
     </div>
+    <!-- Block with special offers  -->
 </section>
 <section class="main_block">
     <div class="container">
@@ -126,13 +127,88 @@
 <!-- TWO PINK SQUARES  -->
 <section class="main_block">
 <div class="container">
-    <div class="wrap pink_square">
-        <div>
+    <div class="wrap bonus_position">
+
+         <div class="wrap pink_square">
             <div><h3>Получайте бонусы и подарки</h3></div>
-            <div><p>Каждый месяц разыгрываем<br>
+            <div> <p>Каждый месяц разыгрываем<br>
                 10 000 рублей для наших клиентов</p></div>
-            <div><input type="text"></div>
-            <div><img src="./images/Email.svg" alt="Email"></div>
+                <div class="email_logo"><img src="./images/Email.svg" alt="Email"></div>
+            <div class="npt"><input type="text" placeholder="Введите e-mail"></div>
+        </div>
+        <div class="wrap light_pink_square">
+            <div><h3>Получайте бонусы и подарки</h3></div>
+            <div> <p>Каждый месяц разыгрываем<br>
+                10 000 рублей для наших клиентов</p></div>
+                <div class="car_logo"><img src="./images/Car.svg" alt="Email"></div>
+            <div class="bonus"><a href="#" class="btn_map_shop">Карта магазинов</a></div>
+        </div>
+    </div>
+</div>
+
+</section>
+<!-- block with img named impuls  -->
+<section class="main_block">
+    <div class="conatiner">
+        <div class="impulse_block">
+        <div class="wrap impuls">
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+        </div>
+        <div class="wrap impuls">
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+        </div>
+        <div class="wrap impuls">
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+            <div><img src="./images/impuls.png" alt="impuls"></div>
+        </div>
+    </div>
+    </div>
+</section>
+<section class="main_block">
+    <div class="container">
+        <div class="wrap special_offers recently watched">
+        <div><p>Вы недавно смотрели</p></div>
+        </div>
+    </div>
+    <div class="wrap special_offers_list">
+    <div class="wrap special_offers_list">
+        <div class="list_item">
+               <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
+               <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
+               <div><p>9 900 ₽ </p> </div>
+                <div class="btn purple"><a href="#">Купить</a></div>
+        </div>
+    </div>
+    <div class="wrap special_offers_list">
+        <div class="list_item">
+               <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
+               <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
+               <div><p>9 900 ₽ </p> </div>
+                <div class="btn purple"><a href="#">Купить</a></div>
+        </div>
+    </div>
+    <div class="wrap special_offers_list second">
+        <div class="list_item">
+               <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
+               <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
+               <div><p>9 900 ₽ </p> </div>
+                <div class="btn purple"><a href="#">Купить</a></div>
+        </div>
+    </div>
+    <div class="wrap special_offers_list">
+        <div class="list_item">
+               <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
+               <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
+               <div><p>9 900 ₽ </p> </div>
+                <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
 </div>
