commit number four

--- a/index.html
+++ b/index.html
@@ -172,13 +172,14 @@
     </div>
     </div>
 </section>
+<!-- ANOTHER BLOCK WITH GREEN CHAIRS  -->
 <section class="main_block">
     <div class="container">
-        <div class="wrap special_offers recently watched">
+        <div class="wrap special_offers recently_watched">
         <div><p>Вы недавно смотрели</p></div>
         </div>
     </div>
-    <div class="wrap special_offers_list">
+    <div class="wrap special_offers_list recently">
     <div class="wrap special_offers_list">
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
@@ -212,6 +213,125 @@
         </div>
     </div>
 </div>
+</section>
+<section>
+    <div class="container">
+        <div class="wrap popular_categories_position">
+        <div class="wrap popular_categories">
+        <div><h4 class="border_in_footer">Популярные 
+            категории</h4></div>
+        <div>
+           <ul class="popular_categories_list">
+            <li>
+                <p>Насадки</p>
+            </li>
+            <li>
+                <p>Инструменты</p>
+            </li>
+            <li>
+                <p>Гель-лаки</p>
+            </li>
+            <li>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <p>Наращивание</p>
+            </li>
+            <li>
+                <p>Оборудование</p>
+            </li>
+           </ul> 
+        </div>
+    </div> 
+    <div class="wrap popular_categories">
+        <div><h4 class="border_in_footer">Популярные категории</h4></div>
+        <div>
+           <ul class="popular_categories_list">
+            <li>
+                <p>Насадки</p>
+            </li>
+            <li>
+                <p>Инструменты</p>
+            </li>
+            <li>
+                <p>Гель-лаки</p>
+            </li>
+            <li>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <p>Наращивание</p>
+            </li>
+            <li>
+                <p>Оборудование</p>
+            </li>
+           </ul> 
+        </div>
+    </div> 
+    <div class="wrap popular_categories">
+        <div><h4 class="border_in_footer">Популярные 
+            категории</h4></div>
+        <div>
+           <ul class="popular_categories_list">
+            <li>
+                <p>Насадки</p>
+            </li>
+            <li>
+                <p>Инструменты</p>
+            </li>
+            <li>
+                <p>Гель-лаки</p>
+            </li>
+            <li>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <p>Наращивание</p>
+            </li>
+            <li>
+                <p>Оборудование</p>
+            </li>
+           </ul> 
+        </div>
+    </div> 
+    <div class="wrap popular_categories">
+        <div><h4 class="border_in_footer">Популярные 
+            категории</h4></div>
+        <div>
+           <ul class="popular_categories_list">
+            <li>
+                <p>Насадки</p>
+            </li>
+            <li>
+                <p>Инструменты</p>
+            </li>
+            <li>
+                <p>Гель-лаки</p>
+            </li>
+            <li>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <p>Наращивание</p>
+            </li>
+            <li>
+                <p>Оборудование</p>
+            </li>
+           </ul> 
+        </div>
+    </div> 
+</div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="wrap">
+            <div><a href="#"><img src="" alt=""></a></div>
+            <div><a href="#"><img src="" alt=""></a></div>
+            <div><a href="#"><img src="" alt=""></a></div>
+            <div><a href="#"><img src="" alt=""></a></div>
+        </div>
+    </div>
 </section>
 </body>
 </html>
