--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <div class="container">
         <div class="wrap popular_categories_position">
         <div class="wrap popular_categories">
-        <div><h4 class="border_in_footer">Популярные 
+        <div><h4 class="border_in_footer">Популярные <br>
             категории</h4></div>
         <div>
            <ul class="popular_categories_list">
@@ -244,7 +244,7 @@
         </div>
     </div> 
     <div class="wrap popular_categories">
-        <div><h4 class="border_in_footer">Популярные категории</h4></div>
+        <div><h4 class="border_in_footer">Популярные<br> категории</h4></div>
         <div>
            <ul class="popular_categories_list">
             <li>
@@ -269,7 +269,7 @@
         </div>
     </div> 
     <div class="wrap popular_categories">
-        <div><h4 class="border_in_footer">Популярные 
+        <div><h4 class="border_in_footer">Популярные <br>
             категории</h4></div>
         <div>
            <ul class="popular_categories_list">
@@ -295,7 +295,7 @@
         </div>
     </div> 
     <div class="wrap popular_categories">
-        <div><h4 class="border_in_footer">Популярные 
+        <div><h4 class="border_in_footer">Популярные<br>
             категории</h4></div>
         <div>
            <ul class="popular_categories_list">
@@ -323,13 +323,33 @@
 </div>
     </div>
 </section>
+<section class="main_block footer_border"><div></div></section>
 <section>
     <div class="container">
-        <div class="wrap">
-            <div><a href="#"><img src="" alt=""></a></div>
-            <div><a href="#"><img src="" alt=""></a></div>
-            <div><a href="#"><img src="" alt=""></a></div>
-            <div><a href="#"><img src="" alt=""></a></div>
+        <div class="wrap footer_position">
+        <div class="wrap footer_social">
+            <div><a href="#"><img src="./images/yt.png" alt=""></a></div>
+            <div><a href="#"><img src="./images/vk.png" alt=""></a></div>
+            <div><a href="#"><img src="./images/fb.svg" alt=""></a></div>
+            <div><a href="#"><img src="./images/inst.png" alt=""></a></div>
+        </div>
+        <div class="wrap footer_call">
+           <div><a href="tel:+88121234567" >8 (812) 123-45-67</a>
+           </div>
+           <div class="brn footer_btn"> <a href="#">Обратный звонок</a></div>
+        </div>
+    </div>
+    </div>
+</section>
+<section class="main_block">
+    <div class="container">
+        <div class="wrap final_footer">
+            <div>
+               <a href="">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</a> 
+            </div>
+            <div>
+                 <a href="">Политика конфиденциальности</a>
+            </div>
         </div>
     </div>
 </section>
