--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <title></title>
 </head>
@@ -94,7 +97,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p>9 900 ₽ </p> </div>
+               <div><p class="value">9 900 ₽ </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -102,7 +105,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p>9 900 ₽ </p> </div>
+               <div><p class="value">9 900 ₽ </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -110,7 +113,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p>9 900 ₽ </p> </div>
+               <div><p class="value">9 900 ₽ </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -118,7 +121,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p>9 900 ₽ </p> </div>
+               <div><p class="value">9 900 ₽ </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -184,7 +187,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p>9 900 ₽ </p> </div>
+               <div><p class="value">9 900 ₽ </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -192,7 +195,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p>9 900 ₽ </p> </div>
+               <div><p class="value">9 900 ₽ </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -200,7 +203,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p>9 900 ₽ </p> </div>
+               <div><p class="value">9 900 ₽ </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -208,14 +211,15 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p>9 900 ₽ </p> </div>
+               <div><p class="value">9 900 ₽ </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
 </div>
 </section>
+<!-- FOOTER  -->
 <section>
-    <div class="container">
+    <div class="container footer_container">
         <div class="wrap popular_categories_position">
         <div class="wrap popular_categories">
         <div><h4 class="border_in_footer">Популярные <br>
@@ -325,7 +329,7 @@
 </section>
 <section class="main_block footer_border"><div></div></section>
 <section>
-    <div class="container">
+    <div class="container footer_container">
         <div class="wrap footer_position">
         <div class="wrap footer_social">
             <div><a href="#"><img src="./images/yt.png" alt=""></a></div>
@@ -342,13 +346,13 @@
     </div>
 </section>
 <section class="main_block">
-    <div class="container">
+    <div class="container footer_container">
         <div class="wrap final_footer">
             <div>
-               <a href="">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</a> 
+               <a href="#">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</a> 
             </div>
             <div>
-                 <a href="">Политика конфиденциальности</a>
+                 <a href="#">Политика конфиденциальности</a>
             </div>
         </div>
     </div>
