--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
@@ -15,17 +16,18 @@
     <div class="wrap">
         <div class="wrap">
 <h1 class="wrap__updated article main_article">Update News</h1>
-<p class="wrap__frst-paragraph paragraph">A cup of brewed coffee represents a contribution of  up to 1.8 grams of <br>
-     fiber of the recommended.</p>
+<p class="paragraph">A cup of brewed coffee represents a contribution of  up to 1.8 grams of 
+    </span> </p>
+    <p class="wrap__frst-paragraph paragraph">fiber of the recommended.</p>
 </div>
 <div class="wrap ImgBlock">
 <div class="wrap">
     <div class="wrap__positionImg">
 <img src="./images/first_img.png" alt="first">
-<h2 class="article">Coffe beans</h2>
-<p class="paragraph">These advertising mottos are targeted <br> to the 56% of coffee drinking <br> consumers.</p>
+<h2 class="article block_ar">Coffe beans</h2>
+<p class="paragraph block_pr">These advertising mottos are targeted <br> to the 56% of coffee drinking <br> consumers.</p>
 <div class="btn">
-    <a href="#"></a>
+    <a href="#"> <img src="./images/Learn_more.svg" alt="LearnMore"></a>
 </div>
     </div>
 </div>
@@ -33,10 +35,10 @@
 <div class="wrap">
     <div class="wrap__positionImg">
 <img src="./images/second_img.png" alt="second">
-<h2 class="article">Coffe beans</h2>
-<p class="paragraph">These advertising mottos are targeted <br> to the 56% of coffee drinking <br> consumers.</p>
+<h2 class="article block_ar">Coffe beans</h2>
+<p class="paragraph block_pr">These advertising mottos are targeted <br> to the 56% of coffee drinking <br> consumers.</p>
 <div class="btn">
-    <a href="#"></a>
+    <a href="#"> <img src="./images/Learn_more.svg" alt="LearnMore"></a>
 </div>
     </div>
 </div>
@@ -44,10 +46,10 @@
 <div class="wrap">
     <div class="wrap__positionImg">
 <img src="./images/third_img.png" alt="third">
-<h2 class="article">Coffe beans</h2>
-<p class="paragraph">These advertising mottos are targeted <br> to the 56% of coffee drinking <br> consumers.</p>
+<h2 class="article block_ar">Coffe beans</h2>
+<p class="paragraph block_pr">These advertising mottos are targeted <br> to the 56% of coffee drinking <br> consumers.</p>
 <div class="btn">
-    <a href="#"></a>
+    <a href="#"> <img src="./images/Learn_more.svg" alt="LearnMore"></a>
 </div>
     </div>
 </div>
