--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p class="value">9 900 ₽ </p> </div>
+               <div><p class="value">9 900 грн </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -106,7 +106,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p class="value">9 900 ₽ </p> </div>
+               <div><p class="value">9 900 грн </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -114,7 +114,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p class="value">9 900 ₽ </p> </div>
+               <div><p class="value">9 900 грн </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -122,7 +122,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p class="value">9 900 ₽ </p> </div>
+               <div><p class="value">9 900 грн </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -188,7 +188,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p class="value">9 900 ₽ </p> </div>
+               <div><p class="value">9 900 грн </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -196,7 +196,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p class="value">9 900 ₽ </p> </div>
+               <div><p class="value">9 900 грн </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -204,7 +204,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p class="value">9 900 ₽ </p> </div>
+               <div><p class="value">9 900 грн </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
@@ -212,7 +212,7 @@
         <div class="list_item">
                <div> <img src="./images/green_chair.png" alt="green_chair"> </div>
                <div><p>Парикмахерское кресло<br> «Норм» гидравлическое</p> </div>
-               <div><p class="value">9 900 ₽ </p> </div>
+               <div><p class="value">9 900 грн </p> </div>
                 <div class="btn purple"><a href="#">Купить</a></div>
         </div>
     </div>
